--- a/nohan23CS028.ipynb
+++ b/nohan23CS028.ipynb
@@ -3162,30 +3162,21 @@
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.cm as cm\n",
         "import matplotlib.colors as colors\n",
-        "\n",
-        "# Load the CSV file\n",
         "file_path = \"Iris.csv\"\n",
         "df = pd.read_csv(file_path)\n",
-        "\n",
-        "# Filter only Iris-setosa\n",
         "setosa_df = df[df['Species'] == 'Iris-setosa'].reset_index(drop=True)\n",
-        "\n",
-        "# Normalize the SepalWidthCm for coloring\n",
         "norm = colors.Normalize(vmin=setosa_df['SepalWidthCm'].min(), vmax=setosa_df['SepalWidthCm'].max())\n",
         "mappable = cm.ScalarMappable(norm=norm, cmap='viridis')\n",
-        "\n",
-        "# Plot bar chart: Petal Length of each Iris-setosa sample\n",
         "fig, ax = plt.subplots(figsize=(10, 5))\n",
         "bars = ax.bar(\n",
         "    setosa_df.index,\n",
         "    setosa_df['PetalLengthCm'],\n",
-        "    color=mappable.to_rgba(setosa_df['SepalWidthCm'])  # apply color map based on normalized sepal width\n",
+        "    color=mappable.to_rgba(setosa_df['SepalWidthCm'])\n",
         ")\n",
-        "\n",
         "ax.set_title('Iris-setosa: Petal Length (Bar Chart Colored by Sepal Width)')\n",
         "ax.set_xlabel('Sample Index')\n",
         "ax.set_ylabel('Petal Length (cm)')\n",
-        "fig.colorbar(mappable, ax=ax, label='Sepal Width (cm)') # Pass the mappable and the axes\n",
+        "fig.colorbar(mappable, ax=ax, label='Sepal Width (cm)')\n",
         "plt.tight_layout()\n",
         "plt.show()"
       ],
