--- a/nohan23CS028.ipynb
+++ b/nohan23CS028.ipynb
@@ -3323,13 +3323,31 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "iris = pd.read_csv('Iris.csv')"
+        "iris = pd.read_csv('Iris.csv')\n",
+        "print(isir_df.head())"
       ],
       "metadata": {
-        "id": "YWtgzI_yHs50"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YWtgzI_yHs50",
+        "outputId": "87b0966b-9663-4efe-9ea3-3051221a8141"
       },
-      "execution_count": 7,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Id  SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm      Species\n",
+            "0   1            5.1           3.5            1.4           0.2  Iris-setosa\n",
+            "1   2            4.9           3.0            1.4           0.2  Iris-setosa\n",
+            "2   3            4.7           3.2            1.3           0.2  Iris-setosa\n",
+            "3   4            4.6           3.1            1.5           0.2  Iris-setosa\n",
+            "4   5            5.0           3.6            1.4           0.2  Iris-setosa\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
