--- a/nohan23CS028.ipynb
+++ b/nohan23CS028.ipynb
@@ -6437,7 +6437,7 @@
         "id": "ahn4FyyCvP9-",
         "outputId": "49e47ecc-22e5-4dca-b056-ee812704c537"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6747,7 +6747,7 @@
         "id": "M9eCTjInx2kK",
         "outputId": "3653aa2d-2a20-4d91-847c-b85a5dc44512"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6789,7 +6789,7 @@
         "id": "1ix4SrXpyN8M",
         "outputId": "bff2568a-a833-45ee-8fec-a71efd681c5f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -6826,7 +6826,7 @@
         "id": "P3xLMkGszBMx",
         "outputId": "4b9ce5a2-48ff-4438-e268-5449c293f7bd"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7140,7 +7140,7 @@
         "id": "GkTWvs5xzWaB",
         "outputId": "f06c1f77-0ea7-42ee-d66b-90120ab59137"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7173,7 +7173,7 @@
         "id": "DM-N9syeztSL",
         "outputId": "66b2ffe1-e521-42e8-ce0e-f9122b5685f9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7563,7 +7563,7 @@
         "id": "MEsuRCwzzv_w",
         "outputId": "5b165f33-0651-4d06-cbf1-295554fd1b80"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8118,7 +8118,7 @@
         "id": "sCxXHsfqz9qg",
         "outputId": "e85248a6-3549-439a-ac28-da861906a60f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8160,7 +8160,7 @@
         "id": "R1M-TEFlz_jw",
         "outputId": "d0d75af0-afa6-4766-99a2-c01b52374f47"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8197,7 +8197,7 @@
         "id": "DDEGVYw40VwA",
         "outputId": "95f13173-1147-47c2-bb83-3ac07e7b3e04"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8226,7 +8226,7 @@
         "id": "pVgz6oQ_1U2o",
         "outputId": "1bb7ef21-d0b7-4153-bfdd-ac87436f77cb"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8595,7 +8595,7 @@
         "id": "NCtkonBo1uzf",
         "outputId": "e03f73d5-f6c8-4124-f3cb-39148a453ad9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8640,7 +8640,7 @@
         "id": "CKIZN1et17Uq",
         "outputId": "cf2a67ca-8a27-4bd0-a693-170940eadc7d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8685,7 +8685,7 @@
         "id": "LLhnHULB2W0_",
         "outputId": "5bfe2dd7-148c-41aa-f6dc-4daaf9348e66"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8716,7 +8716,7 @@
         "id": "JwWa2h5X3MCV",
         "outputId": "8ece1412-6042-4412-b585-4b6ddd61715a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8759,7 +8759,7 @@
         "id": "Rz1ZH6b_4WOX",
         "outputId": "55b8b244-e82f-4473-dfc8-1148eb0dfab5"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8788,7 +8788,7 @@
         "id": "ZcCtxni448im",
         "outputId": "62f74399-b4d2-4045-c009-5211018aaaf9"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8814,7 +8814,7 @@
         "id": "uyR8COf8Dt9H",
         "outputId": "52bf225c-0eb3-49af-df6c-9becb7af7b48"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8840,7 +8840,7 @@
         "id": "oB3Q6wZnEajM",
         "outputId": "febeaeab-668a-42b0-be93-6f01f598091b"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8868,7 +8868,7 @@
         "id": "kB5YN8-3Ecw9",
         "outputId": "1dc0f09a-b67d-44fd-ff86-0e3a90de3f15"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8899,13 +8899,206 @@
         "id": "w55oxf3xEevz",
         "outputId": "9ed5fbf4-1d66-4c6c-edfd-74cbad727d82"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Gradient at x = 2: 20.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "# Create a matrix\n",
+        "A = np.array([[2, -1], [-1, 3]])\n",
+        "# Compute eigenvalues and eigenvectors\n",
+        "eigenvalues, eigenvectors = np.linalg.eig(A)\n",
+        "print(\"Eigenvalues:\")\n",
+        "print(eigenvalues)\n",
+        "print(\"\\nEigenvectors:\")\n",
+        "print(eigenvectors)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ztE36AO-BKvr",
+        "outputId": "cf6b8cd8-9cd2-422e-f49e-2a011fb9601f"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eigenvalues:\n",
+            "[1.38196601 3.61803399]\n",
+            "\n",
+            "Eigenvectors:\n",
+            "[[-0.85065081  0.52573111]\n",
+            " [-0.52573111 -0.85065081]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from scipy.linalg import eig\n",
+        "# Create a matrix\n",
+        "A = np.array([[2, -1], [-1, 3]])\n",
+        "# Compute eigenvalues and eigenvectors\n",
+        "eigenvalues, eigenvectors = eig(A)\n",
+        "print(\"Eigenvalues:\")\n",
+        "print(eigenvalues)\n",
+        "print(\"\\nEigenvectors:\")\n",
+        "print(eigenvectors)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tsgdI0dEBTey",
+        "outputId": "c5c0bc25-a227-4991-d63c-4518ee396a78"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eigenvalues:\n",
+            "[1.38196601+0.j 3.61803399+0.j]\n",
+            "\n",
+            "Eigenvectors:\n",
+            "[[-0.85065081  0.52573111]\n",
+            " [-0.52573111 -0.85065081]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "# Create a matrix\n",
+        "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+        "# Frobenius Norm\n",
+        "frobenius_norm = np.linalg.norm(A, 'fro')\n",
+        "print(f\"Frobenius Norm: {frobenius_norm}\")\n",
+        "# 1-Norm (Maximum Column Sum)\n",
+        "one_norm = np.linalg.norm(A, 1)\n",
+        "print(f\"1-Norm: {one_norm}\")\n",
+        "# 2-Norm (Spectral Norm, Largest Singular Value)\n",
+        "two_norm = np.linalg.norm(A, 2)\n",
+        "print(f\"2-Norm (Spectral Norm): {two_norm}\")\n",
+        "# Infinity Norm (Maximum Row Sum)\n",
+        "inf_norm = np.linalg.norm(A, np.inf)\n",
+        "print(f\"Infinity Norm: {inf_norm}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WzDozymwBV4f",
+        "outputId": "0fb87e46-dffc-494e-c1e0-c6c28da01e74"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Frobenius Norm: 16.881943016134134\n",
+            "1-Norm: 18.0\n",
+            "2-Norm (Spectral Norm): 16.84810335261421\n",
+            "Infinity Norm: 24.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Create a matrix\n",
+        "A = np.array([[2, -1], [-1, 3]])\n",
+        "\n",
+        "# Compute eigenvalues and eigenvectors\n",
+        "eigenvalues, eigenvectors = np.linalg.eig(A)\n",
+        "\n",
+        "print(\"Eigenvalues:\")\n",
+        "print(eigenvalues)\n",
+        "\n",
+        "print(\"\\nEigenvectors:\")\n",
+        "print(eigenvectors)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yz7fWwN-BYRm",
+        "outputId": "07619682-ccde-413e-f23f-05330df865d8"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eigenvalues:\n",
+            "[1.38196601 3.61803399]\n",
+            "\n",
+            "Eigenvectors:\n",
+            "[[-0.85065081  0.52573111]\n",
+            " [-0.52573111 -0.85065081]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Create a matrix\n",
+        "A = np.array([[2, -1], [-1, 3]])\n",
+        "\n",
+        "# Compute eigenvalues and eigenvectors\n",
+        "eigenvalues, eigenvectors = np.linalg.eig(A)\n",
+        "\n",
+        "print(\"Eigenvalues:\")\n",
+        "print(eigenvalues)\n",
+        "\n",
+        "print(\"\\nEigenvectors:\")\n",
+        "print(eigenvectors)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-nGUG8KzBcHu",
+        "outputId": "9a4f3a82-875f-45c3-d145-55ffd403b106"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eigenvalues:\n",
+            "[1.38196601 3.61803399]\n",
+            "\n",
+            "Eigenvectors:\n",
+            "[[-0.85065081  0.52573111]\n",
+            " [-0.52573111 -0.85065081]]\n"
           ]
         }
       ]
