--- a/nohan23CS028.ipynb
+++ b/nohan23CS028.ipynb
@@ -8749,9 +8749,9 @@
           "height": 484
         },
         "id": "Rz1ZH6b_4WOX",
-        "outputId": "343e545e-c56d-4fe7-a2f9-70914b2dca11"
+        "outputId": "20281fe7-2b3b-4d0c-a40e-4f33b48cc082"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9172,12 +9172,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "1Z8Ef8_6EE-z",
-        "outputId": "fbc228e5-27c4-4158-8d91-65e9ce7e24a1"
+        "outputId": "ff2dcbf5-d761-4645-c8b9-678870488f0e"
       },
-      "execution_count": 30,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -9193,7 +9194,8 @@
     {
       "cell_type": "code",
       "source": [
-        "tensor = np.array([[[1, 2], [3, 4]], [[5, 6], [7, 8]]])\n",
+        "import numpy as np\n",
+        "tensor = np.array([[[1, 2], [3, 4]], [[5, 6], [7,89]]])\n",
         "print(\"Tensor:\\n\", tensor)\n",
         "print(\"shape:\", tensor.shape)"
       ],
@@ -9202,24 +9204,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oEQJAdfGGSRH",
-        "outputId": "1f47ebe8-1044-48af-d358-aaaa6489579b"
+        "outputId": "d3793973-77db-4954-ec4a-6d05ccfcbaba"
       },
-      "execution_count": 33,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Tensor:\n",
-            " [[[1 2]\n",
-            "  [3 4]]\n",
+            " [[[ 1  2]\n",
+            "  [ 3  4]]\n",
             "\n",
-            " [[5 6]\n",
-            "  [7 8]]]\n",
+            " [[ 5  6]\n",
+            "  [ 7 89]]]\n",
             "shape: (2, 2, 2)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CKmkxJBEM_Be"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
